fix login header colors in dark mode

--- a/src/styles/adaptedStyles/pages/loginPage.scss
+++ b/src/styles/adaptedStyles/pages/loginPage.scss
@@ -90,14 +90,6 @@
     .login-protocol {
       color: var(--bew-text-3);
     }
-
-    .top-header {
-      filter: invert(1) hue-rotate(180deg);
-    }
-
-    .top-img {
-      background-color: black;
-    }
   }
   // #endregion
 }
